# scAmp

./: LICENSE  README.md  pyproject.toml
pretrained_models/scamp_model_1.0/: model.pt
scamp/: cli.py  io.py
scamp/mixins/: errors.py
scamp/models/: _SCAMP.py  __init__.py
scamp/plotting/: __init__.py  _plot.py
scamp/predict/: __init__.py  pipelines.py  utilities.py
scripts/: aggregate_gene_copy_number.R  scATAC_CNV.R  scATAC_CNV_utilities.R
utilities/: aggregate_copy_number_by_gene.R  scATAC_CNV.R  scATAC_CNV_utilities.R
